@@ -386,14 +386,14 @@ function initKeysPanel(pCallBack){
     
         lFuncs =[
         null,
-        null,               /* f1 */
-        null,               /* f2 */
-        cloudcmd.Viewer,    /* f3 */
-        cloudcmd.Editor,    /* f4 */
-        null,               /* f5 */
-        null,               /* f6 */
-        null,               /* f7 */
-        null,               /* f8 */
+        null,                   /* f1 */
+        null,                   /* f2 */
+        cloudcmd.Viewer,        /* f3 */
+        cloudcmd.Editor,        /* f4 */
+        null,                   /* f5 */
+        null,                   /* f6 */
+        null,                   /* f7 */
+        DOM.promptRemoveCurrent,/* f8 */
     ];
     
     for(var i = 1; i <= 8; i++){
