@@ -270,13 +270,24 @@ var CloudCommander, Util, DOM, CloudFunc;
      *
      * @pCurrentFile
      */
-    DOM.delete                  = function(pCurrentFile){
-        var lMsg    = 'Are you sure thet you wont delete ',
-            lName   = DOM.getCurrentName(pCurrentFile),
-            lRet = confirm(lMsg + lName + '?');
+    DOM.promptRemoveCurrent = function(pCurrentFile){
+        var lRet,
+            lCurrent,
+            lName,
+            lMsg = 'Are you sure thet you wont delete ';
+        
+        /* dom element passed and it is not event */
+        if(pCurrentFile && !pCurrentFile.type)
+            lCurrent = pCurrentFile;
+            
+        lName = DOM.getCurrentName(lCurrent);
+        
+        lRet  = confirm(lMsg + lName + '?');
         
         if(lRet)
-            DOM.removeCurrent(pCurrentFile);
+            DOM.removeCurrent(lCurrent);
+        
+        return lRet;
     };
     
     /**
