@@ -117,7 +117,7 @@ var CloudCommander, Util, DOM;
                         event.preventDefault();//запрет на дальнейшее действие
                     }
                     else if(lKeyCode === KEY.Delete)
-                        DOM.delete(lCurrentFile);
+                        DOM.promptRemoveCurrent(lCurrentFile);
                     
                     /* if f3 or shift+f3 or alt+f3 pressed */
                     else if(lKeyCode === KEY.F3){
