@@ -59,7 +59,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                 
                 delete: {name: 'Delete',
                     callback: function(key, opt){
-                        DOM.delete();
+                        DOM.promptRemoveCurrent();
                 }},
                 
                 upload: {
